# ampli-Fe

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  bundle_macos.sh
.github/workflows/: release.yml
assets/images/: pointer.xcf
assets/shaders/: shader.frag  shader.vert
src/: lib.rs  plugin_state.rs
src/dsp/: mod.rs  smoothed.rs
src/editor/: mod.rs
src/editor/interface/: graphics.rs  mod.rs  state.rs
