[package]
name = "ampli-fe"
version = "0.1.0"
authors = ["Anton Lazarev <https://antonok.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
build = "build.rs"

# No reason to distribute a VST plugin on crates.io.
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
vst = "^ 0.2"
vst_window = "^ 0.1.0"
once_cell = "^ 1.4"
wgpu = "^ 0.6"
wgpu_glyph = "^ 0.10"
raw-window-handle = "^ 0.3"
zerocopy = "^ 0.3"
cgmath = "^ 0.17"
futures = "^ 0.3"
png = "^ 0.16"

[build-dependencies]
glsl-to-spirv = "^ 0.1"
